--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,45 +1,9 @@
-BODY {
-	background-color: #ffffff;
-	color: #333366;
-	font-family: 'times new roman'
+body.mblBackground
+{
+    padding-top: 50px;
 }
 
-H1 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-H2 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-H3 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-H4 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-H5 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-H6 {
-	color: #6666cc;
-	font-family: 'times new roman';
-	text-transform: capitalize
-}
-
-TH {
-	color: #6060cc
+#time_chart
+{
+    width: 720px;
 }
